fix Card z-index: 0

--- a/src/components/ui/Card/Card.module.scss
+++ b/src/components/ui/Card/Card.module.scss
@@ -1,6 +1,6 @@
 .root {
   position: relative;
-  z-index: 1;
+  z-index: 0;
 
   padding: 36px;
 
